clear up the kO example in 1.4

--- a/mo.tex
+++ b/mo.tex
@@ -622,20 +622,20 @@ Consider the degenerate case $X = H\F_2$.  Then $H\F_{2*}(H\F_2) = \mathcal A_*$
 
 \begin{example}
 \todo{I can't tell if this example belongs.}
-Next, we consider $X = kO$, the connective real $K$--theory spectrum.  The main input we need is the structure of $H\F_{2*} kO$ as an $\mathcal A_*$--comodule, so that we can compute \[\Cotor_{\mathcal A_*}^{*, *}(\F_2, H\F_{2*} kO) \Rightarrow \pi_* kO^\wedge_2.\]  There is a slick trick for doing this: by working in the category of $kO$--modules rather than in all spectra, we can construct a relative Adams spectral sequence \[\Cotor_{\pi_* H\F_2 \sm_{kO} H\F_2}^{*, *}(\F_2, \pi_* H\F_2 \sm_{kO}(kO \sm H\F_2)) \Rightarrow \pi_*(kO \sm H\F_2).\]  The second argument is easy to identify: \[\pi_* H\F_2 \sm_{kO}(kO \sm H\F_2) = \pi_* H\F_2 \sm H\F_2 = \mathcal A_*.\]  The Hopf algebra requires further input.  Consider the following trio of cofiber sequences\footnote{This first sequence, known as the Wood cofiber sequence, is a consequence of a very simple form of Bott periodicity~\cite[Section 5]{Harris}.}:
+Next, we consider $X = kO$, the connective real $K$--theory spectrum.  The main input we need is the structure of $H\F_{2*} kO$ as an $\mathcal A_*$--comodule, so that we can compute \[\Cotor_{\mathcal A_*}^{*, *}(\F_2, H\F_{2*} kO) \Rightarrow \pi_* kO^\wedge_2.\]  There is a slick trick for doing this: by working in the category of $kO$--modules rather than in all spectra, we can construct a relative Adams spectral sequence \[\Cotor_{\pi_* H\F_2 \sm_{kO} H\F_2}^{*, *}(\F_2, \pi_* H\F_2 \sm_{kO}(kO \sm H\F_2)) \Rightarrow \pi_*(kO \sm H\F_2).\]  The second argument is easy to identify: \[\pi_* H\F_2 \sm_{kO}(kO \sm H\F_2) = \pi_* H\F_2 \sm H\F_2 = \mathcal A_*.\]  The Hopf algebra requires further input.  Consider the following trio of cofiber sequences\footnote{This first sequence, known as the Wood cofiber sequence, is a consequence of a very simple form of Bott periodicity~\cite[Section 5]{Harris}: there is a fiber sequence of infinite-loopspaces $O/U \to BO \to BU$, and $\OS{kO}{1} = O/U$.}:
 \begin{align*}
 \Susp kO & \xrightarrow{\cdot \eta} kO \to kU, &
-kU & \xrightarrow{\cdot 2} kU \to kU / 2, &
-kU / 2 & \xrightarrow{\cdot \beta} kU / 2 \to kU / (2, \beta) = H\F_2.
+\Susp^2 kU & \xrightarrow{\cdot \beta} kU \to H\Z, &
+H\Z & \xrightarrow{\cdot 2} H\Z \to H\F_2.
 \end{align*}
-These combine to give a resolution of $H\F_2$ via an iterated cofiber of free $kO$--modules, with Poincar\'e series \[((1 + t^2) + t^3(1 + t^2)) + t((1 + t^2) + t^3(1 + t^2)) = 1 + t + t^2 + 2t^3 + t^4 + t^5 + t^6.\]  This gives a small presentation of $\pi_* H\F_2 \sm_{kO} H\F_2$ by repeatedly using the identity $kO \sm_{kO} H\F_2 \simeq H\F_2$: it is a commutative Hopf algebra over $\F_2$ with the above Poincar\'e series.  It follows from the Borel--Milnor--Moore~\cite[Theorem 7.11]{MilnorMoore} classification of commutative Hopf algebras over $\F_p$, as well as knowledge that $\pi_{* \le 2} \S \to \pi_{* \le 2} kO$, that we have a presentation
+These combine to give a resolution of $H\F_2$ via an iterated cofiber of free $kO$--modules, with Poincar\'e series \[((1 + t^2) + t^3(1 + t^2)) + t((1 + t^2) + t^3(1 + t^2)) = 1 + t + t^2 + 2t^3 + t^4 + t^5 + t^6.\]  Repeatedly using the identity $kO \sm_{kO} H\F_2 \simeq H\F_2$ gives a small presentation of the Hopf algebra $\pi_* H\F_2 \sm_{kO} H\F_2$: it is a commutative Hopf algebra over $\F_2$ with the above Poincar\'e series.  The Borel--Milnor--Moore~\cite[Theorem 7.11]{MilnorMoore} classification of commutative Hopf algebras over $\F_p$ shows that the algebra structure is either \[\frac{\F_2[a, b, c]}{(a^2 = 0, b^2 = 0, c^2 = 0)} \quad \text{or} \quad \frac{\F_2[a, b, c]}{(a^2 = b, b^2 = 0, c^2 = 0)}\] for $|a| = 1$, $|b| = 2$, and $|c| = 3$.  By knowing that the natural map $\mathcal A \to \pi_* H\F_2 \sm_{kO} H\F_2$ winds up inducing an isomorphism $\pi_{* \le 2} \S \to \pi_{* \le 2} kO$, we conclude that we are in the latter case, which gives a presentation of the Hopf algebra as a whole:
 \begin{center}
 \begin{tikzcd}
 \pi_* H\F_2 \sm H\F_2 \arrow{r} \arrow[equal]{d} & \pi_* H\F_2 \sm_{kO} H\F_2 \arrow[equal]{d} \\
 \mathcal A_* \arrow{r} & \begin{array}{c}\F_2[\xi_1, \xi_2, \xi_3, \xi_4, \ldots] \\ \hline (\xi_1^4, \xi_2^2), (\xi_n \mid n \ge 3)\end{array}.
 \end{tikzcd}
 \end{center}
-This subgroup scheme $\Spec \pi_* H\F_2 \sm_{kO} H\F_2 \subseteq \InternalAut_1 \G_a$ is admits easy memorization: it is the subscheme of automorphisms of the form $x + \xi_1 x^2 + \xi_2 x^4$, with exactly the additional relations imposed on $\xi_1$ and $\xi_2$ so that this set is stable under composition and inversion.\footnote{A similar analysis shows that $H\F_2{}_* H\Z$ corepresents the subscheme of automorphisms of the form $x + \xi_1 x^2$ which are stable under composition and inversion.}\footnote{There is also an accidental isomorphism of this Hopf algebra with $\F_2^{D_4}$, where $D_4$ is the dihedral group with $8$ elements.}  Its cohomology is periodic with period $8$, and it is pictured through a range in \Cref{kOASSFigure}.
+This Hopf algebra is commonly denoted $\mathcal A(1)_*$, and its corresponding subgroup scheme $\Spec \pi_* H\F_2 \sm_{kO} H\F_2 \subseteq \InternalAut_1 \G_a$ admits easy memorization: it is the subscheme of automorphisms of the form $x + \xi_1 x^2 + \xi_2 x^4$, with exactly the additional relations imposed on $\xi_1$ and $\xi_2$ so that this set is stable under composition and inversion.\footnote{A similar analysis shows that $H\F_2{}_* H\Z$ corepresents the subscheme of automorphisms of the form $x + \xi_1 x^2$ which are stable under composition and inversion.}\footnote{There is also an accidental isomorphism of this Hopf algebra with $\F_2^{D_4}$, where $D_4$ is the dihedral group with $8$ elements.}  Its cohomology is periodic with period $8$, and it is pictured through a range in \Cref{kOASSFigure}.
 \end{example}
 
 \begin{example}
